[package]
name = "collie"
version = "0.1.12"
description = "A minimal RSS reader just for you"
authors = ["parksb <parkgds@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/parksb/collie"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "path-all", "dialog-confirm", "dialog-ask", "notification-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rusqlite = "0.28"
sea-query = "0"
sea-query-rusqlite = { version = "0", features = ["with-chrono"] }
rss = "2.0"
atom_syndication = "0.12"
reqwest = { version = "0.11", features = ["blocking"] }
sha1_smol = { version = "1", features = ["std"] }
thiserror = "1.0"
regex = "1.8"
scraper = "0.18.1"

[dev-dependencies]
pretty_assertions = "1.4"

[patch.crates-io]
litemap = "=0.7.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
